# DeniTheGame

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md
DeniTheGame/: CMakeLists.txt  CardDealler.cpp  ClickableCard.cpp  DeniGame.cpp  GameInitScreen.cpp  GameManager.cpp  GameOverlayDialog.cpp  InteractiveGraphicsScene.cpp  MemoryCardItem.cpp  Player.cpp  SettingsManager.cpp  dbprovider.cpp  main.cpp
DeniTheGame/include/: CardDealler.h  ClickableCard.h  DeniGame.h  GameInitScreen.h  GameManager.h  GameOverlayDialog.h  InteractiveGraphicsScene.h  MemoryCardItem.h  Player.h  SettingsManager.h  dbprovider.h
DeniTheGame/resource/: DeniTheGame.qrc  scheme.sql
DeniTheGame/translations/: DeniTheGame_ru.ts
DeniTheGame/ui/: DeniGame.ui  GameInitScreen.ui
